@@ -17,7 +17,7 @@ theme=openSUSE
 ; other sections to read
 layout=800x600,install
 ; penguin theme likelihood (in percent, -1 = auto)
-penguin=0
+penguin=-1
 ; activate speech output
 talk=0
 ; sound volume (0..100)
