@@ -1514,12 +1514,10 @@ config.penguin -1 eq {
   date
   0
 
-  over month 11 eq { 5 add } if
-  over month 12 eq { 15 add } if
-  over month 2 le { 6 add } if
+  over month 12 eq { 5 add } if
+  over month 1 le { 5 add } if
   over weekday 5 eq { 2 mul } if
   over weekday 6 eq { 4 mul } if
-  over month dup 2 gt exch 11 lt and { pop 1 } if
   over dup month 12 eq exch day dup 24 ge exch 6 eq or and { pop 100 } if
   over dup month 1 eq exch day 1 eq and { pop 100 } if
 
