@@ -69,3 +69,5 @@ white setcolor
 
 10 570 moveto "Press Esc to leave graphics." show
 
+5000000 usleep
+
