@@ -1,3 +1,6 @@
+2/12/2008:	v4.1.18
+	- enabled penguin theme for openSUSE
+
 1/12/2008:	v4.1.17
 	- new texts for speech support (bnc #391313)
 
